// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Well checkGrammar=false 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well checkGrammar=true 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well checkHighlight=false 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well checkHighlight=true 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well checkSpaces=false 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well checkSpaces=true 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well className="my-classname" 1`] = `
<div
  className="uu5-bricks-well my-classname uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema="brown" 1`] = `
<div
  className="color-schema-brown uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema="brown-rich" 1`] = `
<div
  className="color-schema-brown-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema="cyan" 1`] = `
<div
  className="color-schema-cyan uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema="cyan-rich" 1`] = `
<div
  className="color-schema-cyan-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema="default" 1`] = `
<div
  className="color-schema-default uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema="green" 1`] = `
<div
  className="color-schema-green uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema="green-rich" 1`] = `
<div
  className="color-schema-green-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema="grey" 1`] = `
<div
  className="color-schema-grey uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema="grey-rich" 1`] = `
<div
  className="color-schema-grey-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema="orange" 1`] = `
<div
  className="color-schema-orange uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema="orange-rich" 1`] = `
<div
  className="color-schema-orange-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema="pink" 1`] = `
<div
  className="color-schema-pink uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema="pink-rich" 1`] = `
<div
  className="color-schema-pink-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema="purple" 1`] = `
<div
  className="color-schema-purple uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema="purple-rich" 1`] = `
<div
  className="color-schema-purple-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema="red" 1`] = `
<div
  className="color-schema-red uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema="red-rich" 1`] = `
<div
  className="color-schema-red-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema="yellow" 1`] = `
<div
  className="color-schema-yellow uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well colorSchema="yellow-rich" 1`] = `
<div
  className="color-schema-yellow-rich uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well content="This is Content from ContentMixin" 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Well content=12345 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Well controlled=false 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well controlled=true 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well default props 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well disabled=false 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well disabled=true 1`] = `
<div
  className="uu5-bricks-well uu5-common-disabled uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Well docKit examples UU5.Bricks.Well should render without crash 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Some content"
  />
</div>
`;

exports[`UU5.Bricks.Well dynamic=false 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well dynamic=true 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well hidden=false 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well hidden=true 1`] = `
<div
  className="uu5-bricks-well uu5-common-hidden uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well id="myId" 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well ignoreHTML=false 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well ignoreHTML=true 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well name="myName" 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well nestingLevel="bigBox" 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well nestingLevel="box" 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well nestingLevel="boxCollection" 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well nestingLevel="container" 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Well nestingLevel="page" 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well nestingLevel="smallBox" 1`] = `""`;

exports[`UU5.Bricks.Well nestingLevel="smallBoxCollection" 1`] = `""`;

exports[`UU5.Bricks.Well nestingLevel="spa" 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well noIndex=false 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well noIndex=true 1`] = `
<div
  className="uu5-bricks-well uu5-noindex uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well pureRender=false 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well pureRender=true 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well selected=false 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well selected=true 1`] = `
<div
  className="uu5-bricks-well uu5-common-selected uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Well style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Well textCorrector=false 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well textCorrector=true 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Well tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-well uu5-common-bg-style-filled uu5-bricks-well-default"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
